--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -14,4 +14,5 @@ protobuf==4.21.12
 # https://stackoverflow.com/questions/77213053/why-did-flask-start-failing-with-importerror-cannot-import-name-url-quote-fr
 Werkzeug==2.2.2
 
-requests
+requests==2.31.0
+urllib3<2
